_versions/manually_created_storage/simplesite-depoloyment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: simplesite
  labels:
    app: simplesite
spec:
  selector:
    matchLabels:
      app: simplesite
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: simplesite
        tier: frontend
    spec:
      containers:
      - image: registry.ng.bluemix.net/mywpnamespace/simplesite:v0.4
        name: simplesite
        ports:
        - containerPort: 80
          name: simplesite
        volumeMounts:
        - name: simplesite-persistent-storage
          mountPath: /usr/local/apache2/htdocs/storage
      volumes:
      - name: simplesite-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
