_versions/manually_created_storage/simplesite-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplesite-service
spec:
  selector:
     app: simplesite
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
