_versions/manually_created_storage/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  selector:
     app: wordpress
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
